tests/vertical-slice/reject/generic_enum_not_supported.hew
// Reject fixture: GenericEnumNotYetSupported
//
// Generic enums (those declared with one or more type parameters) require a
// monomorphisation-keyed layout registry. Until the next-stage substrate
// lands, the compiler fail-closes with a typed diagnostic rather than
// silently registering an under-specified layout.
//
// Note: the enum is named `MaybeNum` (not `Option`) to avoid any overlap
// with the builtin generic `Option<T>` type. The diagnostic fires at enum
// declaration — no constructor reference is needed. Monomorphic
// mixed-variant enums (unit + tuple + struct variants on a non-generic
// declaration) lower successfully end-to-end.
//
// Expected: E_NOT_YET_IMPLEMENTED GenericEnumNotYetSupported
enum MaybeNum<T> {
    Some(T);
    None;
}

fn main() {
    println("test");
}
